--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.kafka.bootstrap-servers=SGarcia-Windows:9092
+spring.kafka.bootstrap-servers=192.168.31.93:9092
+
+#Watch endpoints
+logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
